# planet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config-builds  do-build  do-build-ci  requirements.cmake
examples/: CMakeLists.txt  cmd-client.cpp  oggplayer.cpp  snake.cpp  snake.md  tone.cpp
include/planet/: affine2d.hpp  affine3d.hpp  array.hpp  asset_manager.hpp  audio.hpp  behaviour.hpp  clock.hpp  colour.hpp  comms.hpp  connection.hpp  drawing.hpp  ecs.hpp  events.hpp  folders.hpp  functional.hpp  hexmap.hpp  log.hpp  map.hpp  maths.hpp  message.hpp  numbers.hpp  ostream.hpp  queue.hpp  random.hpp  serialise.hpp  stdin.hpp  telemetry.hpp  time.hpp  to_string.hpp  tuple.hpp  ui.hpp  variant.hpp  version.hpp  vertex.hpp  widget.hpp
include/planet/affine/: extents2d.hpp  forward.hpp  matrix2d.hpp  matrix3d.hpp  point2d.hpp  point3d.hpp  rectangle2d.hpp  transform2d.hpp  transform3d.hpp
include/planet/audio/: buffer.hpp  channel.hpp  clocks.hpp  driver.hpp  files.hpp  forward.hpp  gain.hpp  mixer.hpp  music.hpp  oscillator.hpp  stereo.hpp  tap.hpp
include/planet/behaviour/: README.md  context.hpp  decorators.hpp  key.hpp  leaf.hpp  parameter.hpp  runner.hpp  state.hpp  type.hpp
include/planet/camera/: README.md  orthogonal_birdseye.hpp  target3d.hpp
include/planet/comms/: README.md  inproc.hpp  internal.hpp  signal.hpp
include/planet/debug/: ui.hpp
include/planet/drawing/: colour.hpp  files.hpp  image.hpp
include/planet/ecs/: README.md  component_proxy.hpp  entities.hpp  entity.hpp  entity_id.hpp  entity_lookup.hpp  exceptions.hpp  forward.hpp  storage.hpp  storage_base.hpp  type_index.hpp  weak_entity_id.hpp
include/planet/events/: action.hpp  back.hpp  bus.hpp  keys.hpp  mouse.hpp  queue.hpp  quit.hpp  scroll.hpp
include/planet/map/: forward.hpp  hex.hpp  square.hpp
include/planet/queue/: concepts.hpp  forward.hpp  forwarding.hpp  mpsc.hpp  pmc.hpp  psc.hpp  tspsc.hpp
include/planet/random/: generator.hpp  pick.hpp
include/planet/serialise/: README.md  affine.hpp  base_types.hpp  chrono.hpp  collections.hpp  events.hpp  exceptions.hpp  felspar.hpp  forward.hpp  load.hpp  load_buffer.hpp  map.hpp  marker.hpp  muxing.hpp  save_buffer.hpp  string.hpp  variant.hpp
include/planet/telemetry/: README.md  allocator.strategy.hpp  counter.hpp  duration.hpp  forward.hpp  id.hpp  map.hpp  minmax.hpp  performance.hpp  pool.strategy.hpp  rate.hpp  table.hpp  time.hpp  timestamps.hpp
include/planet/time/: checkpointer.hpp  clock.hpp  rate-limiter.hpp
include/planet/ui/: baseplate.hpp  box.hpp  button.hpp  checkbox.hpp  collection.reflowable.hpp  concepts.hpp  constrained.hpp  draggable.hpp  drawable.hpp  element.hpp  forward.hpp  gravity.hpp  helpers.hpp  layout.breakable_row.hpp  layout.column.hpp  layout.corners.hpp  layout.grid.hpp  layout.hpp  layout.row.hpp  layoutable.hpp  pack.layout.hpp  pack.reflowable.hpp  padding.hpp  panel.hpp  range.hpp  reflowable.hpp  scale.hpp  screen.hpp  size.hpp  target_aspect.hpp  target_size.hpp  widget.hpp  wrapper.detail.hpp  wrapper.hpp
include/planet/vertex/: coloured.hpp  coloured_textured.hpp  forward.hpp  normal.hpp  normal_textured.hpp  uvpos.hpp
include/planet/widget/: button.hpp  checkbox.hpp  volume.slider.hpp
libs/: CMakeLists.txt
src/: CMakeLists.txt  affine.cpp  affine2d.tests.cpp  affine3d.tests.cpp  asset_manager.cpp  asset_manager.tests.cpp  audio.cpp  audio.tests.cpp  baseplate.ui.cpp  baseplate.ui.tests.cpp  box.layout.tests.cpp  cameras.cpp  cameras.tests.cpp  clock.cpp  cmd-client.cpp  colour.cpp  comms.cpp  connection.cpp  ecs.cpp  entities.tests.cpp  event.tests.cpp  files-audio.cpp  files.audio.cpp  files.cpp  files.drawing.cpp  folders.cpp  gain.audio.cpp  gain.cpp  gravity.tests.cpp  gravity.ui.cpp  grid.layout.tests.cpp  headers.cpp  hex.map.cpp  id.telemetry.cpp  image.cpp  image.drawing.cpp  log.cpp  log.tests.cpp  map.cpp  map.hex.tests.cpp  (+30 more)
test/: CMakeLists.txt  affine2d.tests.cpp  affine3d.tests.cpp  asset_manager.tests.cpp  baseplate.ui.tests.cpp  box.layout.tests.cpp  breakable_row.layout.tests.cpp  cameras.tests.cpp  clock.tests.cpp  column.layout.tests.cpp  constrained.tests.cpp  entities.tests.cpp  gravity.tests.cpp  grid.layout.tests.cpp  headers.cpp  hexmap.tests.cpp  map.tests.cpp  mouse.tests.cpp  panel.tests.cpp  performance.tests.cpp  range.ui.tests.cpp  row.layout.tests.cpp  scaling.tests.cpp  serialise.tests.cpp  telemetry.tests.cpp  time.tests.cpp  ui.tests.cpp
tooling/: README.md
tooling/linux-builder/: README.md  create
tooling/linux-builder/container/: Dockerfile
tooling/serialisation/: CMakeLists.txt  explorer.cpp
tools/: CMakeLists.txt
tools/plogcat/: CMakeLists.txt  plogcat.cpp
